# ccspec

./: .gitignore  CMakeLists.txt
spec/: CMakeLists.txt
spec/support/: inspect_spec.cc
src/: CMakeLists.txt
src/support/: inspect.cc
